# bight.nvim

./: .gitignore  Cargo.toml  README.md  build.lua
src/: editor.rs  lib.rs  util.rs
src/editor/: api.rs  autocmd.rs  clipboard.rs  key.rs  util.rs
src/util/: api.rs
